Add Events, ModelDataRequirement, bug fixes, cleanup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
-name: InstaDeepslate
+name: InstaMine
 version: '${version}'
-main: com.github.kaspiandev.instadeepslate.InstaDeepslate
+main: com.github.kaspiandev.instamine.InstaMine
 api-version: '1.19'
+author: KaspianDev
