Add reload command and messages

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "java"
+    id "com.gradleup.shadow" version "8.3.0"
 }
 
 group = "com.github.kaspiandev"
@@ -15,10 +16,22 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "minebench-repo"
+        url = "https://repo.minebench.de/"
+    }
 }
 
 dependencies {
     compileOnly "org.spigotmc:spigot-api:1.19.4-R0.1-SNAPSHOT"
+
+    implementation "de.themoep:minedown:1.7.1-SNAPSHOT"
+}
+
+shadowJar {
+    setArchiveClassifier(null)
+
+    relocate "de.themoep.minedown", "com.github.kaspiandev.instamine.minedown"
 }
 
 def targetJavaVersion = 17
@@ -47,3 +60,5 @@ processResources {
         expand props
     }
 }
+
+tasks.build.dependsOn(shadowJar)
